# AMR-Interpolation

./: .giti  .gitignore  AMR-Interpolation.ipynb  README.md
.spack/: install_environment.json  install_manifest.json  install_times.json  spack-configure-args.txt  spec.json
getData/: .gitignore  CMakeLists.txt  hdf5  main.cpp
getData/.brew/: hdf5.rb
getDatav2/: CMakeLists.txt  main.cpp
loadData/: CMakeLists.txt  main.cpp
